fix: sidebar too small on phone

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -353,6 +353,7 @@ main {
   width: max-content;
   padding: 3px 12px;
   border-radius: 8px;
+  margin: auto auto;
 }
 
 .contact-me{
@@ -364,7 +365,7 @@ main {
   width: max-content;
   padding: 3px 12px;
   border-radius: 8px;
-  margin: 60px 30px auto;
+  margin: 60px auto;
 }
 
 .info_more-btn {
@@ -1345,7 +1346,7 @@ textarea.form-input::-webkit-resizer { display: none; }
    */
 
   .sidebar {
-    max-height: 180px;
+    max-height: 230px;
     margin-bottom: 30px;
   }
 
